--- a/src/utilities.css
+++ b/src/utilities.css
@@ -1,21 +1,30 @@
 .heading-l {
+  color: var(--color);
+  font-family: var(--family);
+  text-transform: capitalize;
+  font-weight: 700;
   font-size: 64px;
   line-height: 77px;
 }
 
 .heading-m {
+  color: var(--purple);
   font-size: 24px;
   line-height: 29px;
 }
 
 .heading-s {
+  color: var(--color);
+  font-family: var(--family);
+  font-weight: 700;
   font-size: 20px;
   line-height: 24px;
 }
 
 .body-m {
+  color: var(--color);
   font-family: var(--family);
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 24px;
 }
