--- a/src/style.css
+++ b/src/style.css
@@ -79,9 +79,13 @@
 
 .App {
   --purple: #a445ed;
+  --red: rgb(244, 64, 40);
+  --gray: #e9e9e9;
+  --light-gray: #757575;
   min-height: 100vh;
   display: grid;
   place-items: center;
+  padding: 60px;
 }
 
 .App.light {
@@ -95,20 +99,22 @@
 }
 
 .App.sans-serif {
-  /* font-family: sans-serifu; */
   --family: sans-serifu;
+  --style: italic;
 }
 
 .App.serif {
-  /* font-family: serifu; */
   --family: serifu;
+  --style: normal;
 }
 
 .App.mono {
-  /* font-family: mono; */
   --family: mono;
+  --style: normal;
 }
 
-main {
-  width: 50%;
+@media screen and (max-width: 500px) {
+  .App {
+    padding: 24px;
+  }
 }
