--- a/src/utilities.css
+++ b/src/utilities.css
@@ -8,7 +8,8 @@
 }
 
 .heading-m {
-  color: var(--purple);
+  color: var(--color);
+  font-family: var(--family);
   font-size: 24px;
   line-height: 29px;
 }
@@ -32,4 +33,30 @@
 .body-s {
   font-size: 14px;
   line-height: 17px;
+}
+
+@media screen and (max-width: 500px) {
+  .heading-l {
+    font-size: 32px;
+    line-height: 39px;
+  }
+
+  .heading-m {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .heading-s {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .body-m {
+    font-size: 15px;
+    line-height: 24px;
+  }
+
+  .body-s {
+    line-height: 15px;
+  }
 }
